# opu_local

./: .gitignore  ARCHITECTURE.md  AUTHORS.md  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PATTERNS.md  README.md  REFACTORING.md  TESTING.md  cleanup_disk_space.sh  config.py  coverage.xml  main.py  opu_state.tmp  pyproject.toml  pytest.ini  requirements.txt  run_opu.sh  setup_python312.sh  test_deepface.py  test_emotion_persistence.py  visualize_emotions.py  youtube_opu.py
core/: __init__.py  audio_cortex.py  audio_input_handler.py  brain.py  camera.py  cortex.py  expression.py  formant_synthesizer.py  genesis.py  language_memory.py  language_system.py  language_utils.py  mic.py  object_detection.py  opu.py  perception.py  phoneme_inventory.py  speech_recognition.py  speech_synthesis.py  universal_phoneme_inventory.py  vision_cortex.py
core/patterns/: __init__.py  commands.py  introspection_strategy.py  maturity_state.py  observer.py  opu_builder.py  processing_pipeline.py  sense_decorator.py  sense_factory.py
examples/: pattern_usage.py
papers/: OPU_Monograph_v3.4.3.tex  OPU_Monograph_v3.4.tex
tests/: README.md  __init__.py  conftest.py  run_tests.sh  test_audio_input_handler.py  test_cortex.py  test_cortex_vision.py  test_cycle_utils.py  test_expression.py  test_file_logger.py  test_genesis.py  test_hud_utils.py  test_language_memory.py  test_language_utils.py  test_log_window.py  test_log_window_macos.py  test_object_detection.py  test_opu_utils.py  test_patterns_commands.py  test_patterns_introspection_strategy.py  test_patterns_maturity_state.py  test_patterns_observer.py  test_patterns_opu_builder.py  test_patterns_processing_pipeline.py  test_patterns_sense_decorator.py  test_patterns_sense_factory.py  test_perception.py  test_persistence.py  test_phoneme_inventory.py  test_reflection_generator.py  test_vision.py  test_visualization.py  test_youtube_processor.py
utils/: cycle_utils.py  emotion_visualizer.py  file_logger.py  hud_utils.py  log_window.py  log_window_macos.py  main_hud_utils.py  opu_utils.py  persistence.py  reflection_generator.py  state_viewer.py  visualization.py  youtube_processor.py
