[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opu"
version = "3.0.0"
description = "Orthogonal Processing Unit - A Process-Centric AI Architecture"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "OPU Contributors"}
]
keywords = ["ai", "process-centric", "audio-processing", "cognitive-architecture", "real-time"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "sounddevice>=0.4.4",
    "scipy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/opu"
Documentation = "https://github.com/yourusername/opu#readme"
Repository = "https://github.com/yourusername/opu.git"
Issues = "https://github.com/yourusername/opu/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[tool.setuptools]
packages = ["core", "utils"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

